--- a/public/index.html
+++ b/public/index.html
@@ -47,19 +47,20 @@
         <a-asset-item id="font" src="font/mp.json">
       </a-assets>
 
-      <!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
-      <a-marker type="pattern" url="marker/farewell.patt">
-        <!-- <a-text value="Congratulations!" position=" 0 0 -1" align="center" rotation="-90 0 0" color="#DD4827"></a-text> -->
-        <!-- <a-plane position=" 0 0 -1" rotation="-90 0 0" width="1" height="1" material="shader:html; target:#target1;"></a-plane> -->
-        <a-entity text-geometry="value: FY17のみんな、卒業おめでとう！; font: #font; size: 0.1;" position=" -1 0 0" rotation="-90 0 0" width="5" height="3" material="color: red;"></a-entity>
+      <a-marker type="pattern" url="marker/grad.patt">
+        <a-entity text-geometry="value: FY17のみんな、CbD卒業おめでとう！; font: #font; size: 0.1;" position="-1 0 0" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
       </a-marker>
 
-      <a-marker type="pattern" url="marker/farewell-kanji.patt">
-        <a-plane position="0 0 0" rotation="-90 0 0" width="1" height="1" color="#7BC8A4"></a-plane>
-        <a-text value="Happy New Year!" position=" 0 0 1" align="center" rotation="-90 0 0" color="#DD4827"></a-text>
+      <a-marker type="pattern" url="marker/young.patt">
+        <a-image src="img/new-employee-orientation.png" position="0 0 0" rotation="90 0 180"></a-image>
+        <a-entity text-geometry="value: 懐かしの入社式; font: #font; size: 0.1;" position="-1 1 1" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
       </a-marker>
 
-      <!-- <a-camera-static/> -->
+      <a-marker type="pattern" url="marker/welcome.patt">
+        <a-image src="img/welcome-party.JPG" position="0 0 0" rotation="90 0 180"></a-image>
+        <a-entity text-geometry="value: あきおさんにも歓迎されちゃいました; font: #font; size: 0.1;" position="-1 1 1" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
+      </a-marker>
+
       <a-entity camera></a-entity>
     </a-scene>
 
