--- a/public/index.html
+++ b/public/index.html
@@ -44,20 +44,21 @@
   
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; trackingMethod: best; matrixCodeType: 3x3;' vr-mode-ui="enabled: false">
       <a-assets>
-        <a-asset-item id="font" src="https://firebasestorage.googleapis.com/v0/b/fy17farewellparty.appspot.com/o/font%2Fmp.json?alt=media&token=f2f494e2-9e8d-48d9-94bd-9787b62ac34b">
+        <a-asset-item id="font" src="font/mp.json">
       </a-assets>
 
-      <a-marker type="pattern" url="https://firebasestorage.googleapis.com/v0/b/fy17farewellparty.appspot.com/o/marker%2Fgrad.patt?alt=media&token=1b6e7654-e61c-4c93-af9d-3f79e0f57571">
-        <a-entity text-geometry="value: FY17のみんな、CbD卒業おめでとう！; font: #font; size: 0.1;" position="-1 0 0" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
+      <a-marker type="pattern" url="marker/grad.patt">
+        <a-image src="img/sotsugyou_omedetou_boy.png" position="0 0 0" rotation="90 0 180"></a-image>
+        <a-entity text-geometry="value: 卒業おめでとう！; font: #font; size: 0.1;" position="-1 1 1" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
       </a-marker>
 
-      <a-marker type="pattern" url="https://firebasestorage.googleapis.com/v0/b/fy17farewellparty.appspot.com/o/marker%2Fyoung.patt?alt=media&token=f0e70eac-1403-459b-aae9-142afc2e7074">
-        <a-image src="img/new-employee-orientation.png" position="0 0 0" rotation="90 0 180"></a-image>
+      <a-marker type="pattern" url="marker/young.patt">
+        <a-image src="img/message_sotsugyou_omedetou.png" position="0 0 0" rotation="90 0 180"></a-image>
         <a-entity text-geometry="value: 懐かしの入社式; font: #font; size: 0.1;" position="-1 1 1" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
       </a-marker>
 
-      <a-marker type="pattern" url="https://firebasestorage.googleapis.com/v0/b/fy17farewellparty.appspot.com/o/marker%2Fwelcome.patt?alt=media&token=a7eda908-6310-4b8f-8db3-f9cf445fe86b">
-        <a-image src="img/welcome-party.JPG" position="0 0 0" rotation="90 0 180"></a-image>
+      <a-marker type="pattern" url="marker/welcome.patt">
+        <a-image src="img/ribbon_syuku_sotsugyou.png" position="0 0 0" rotation="90 0 180"></a-image>
         <a-entity text-geometry="value: あきおさんにも歓迎されちゃいました; font: #font; size: 0.1;" position="-1 1 1" rotation="-90 0 0" width="5" height="3" material="color: #3cb371;"></a-entity>
       </a-marker>
 
